data/derived/fa15/progs/unify/prog0438.ml.out
Characters 69-74:
  else mulByDigit ((i-1) l);;
                   ^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
